Add RBAC - Role Based Access Control with ROLE_USER, ROLE_ADMIN, ROLE_MANAGER